# mosaic

./: .gitignore  404.html  README.md  create_benchmarks.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt
benchmark_data/benchmark1/test1/: bulk.tsv  signature.tsv  true_proportions.csv
benchmark_data/benchmark1/test2/: bulk.tsv  signature.tsv  true_proportions.csv
benchmark_data/benchmark1/test3/: bulk.tsv  signature.tsv  true_proportions.csv
benchmark_data/benchmark1/test4/: bulk.tsv  signature.tsv  true_proportions.csv
benchmark_data/benchmark1/test5/: bulk.tsv  signature.tsv  true_proportions.csv
data_preparation/: prepare_data.py
docs/: index.md  usage.md
eval_data/: build_from_fragments.py
example/: example.py
examples/: example.py
mosaic/: deconvolve.py  evaluate.py  preprocessing.py
search/: search_index.json
site/: index.html
usage/: index.html
