[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic"
version = "0.1.0"
description = "A systematic benchmark of machine learning methods for bulk ATAC-seq deconvolution. Using DeconPeaker's preprocessing pipeline as a fixed foundation, we evaluate a range of approaches — from regularized regression to gradient boosting and constrained neural networks — to ask how much model complexity chromatin accessibility deconvolution actually requires."
readme = "README.md"
requires-python = ">=3.10"
# dependencies = ["numpy", "requests"]

[tool.setuptools.packages.find]
where = ["."]  # Tells setuptools to start looking in the current directory (Mosaic/)
include = ["*"]  # Look at all folders
# It is highly recommended to exclude utility folders that might accidentally get packaged
exclude = ["temp*", "examples*"]