[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic"
version = "0.1.0"
description = "A systematic benchmark of machine learning methods for bulk ATAC-seq deconvolution. Using DeconPeaker's preprocessing pipeline as a fixed foundation, we evaluate a range of approaches — from regularized regression to gradient boosting and constrained neural networks — to ask how much model complexity chromatin accessibility deconvolution actually requires."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.10.8",
    "pandas==2.1.1",
    "numpy==1.26.4",
    "macs3==3.0.4",
    "plotly==5.24.1",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "snapatac2==2.8.0",
    "scanpy==1.12.1",
]

[tool.setuptools.packages.find]
where = ["."]  # Tells setuptools to start looking in the current directory (Mosaic/)
include = ["*"]  # Look at all folders
exclude = ["temp*"]
